--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,10 +6,12 @@
         </div>
         <div class="page__link">
             <div>
-                <a href="#skills">Skills</a>
+                <!-- <a href="#skills">Skills</a> -->
+                <a routerLink="skills">Skills</a>
             </div>
             <div>
-                <a href="#experience">Work experience</a>
+                <!-- <a href="#experience" >Work experience</a> -->
+                <a routerLink="work-experience">Work experience</a>
             </div>
             <!-- <div class="skill">
                 <a href="#skills">Skills</a>
