adding all changes

--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -24,11 +24,11 @@
         <div class="intro__description">
             <div class="section__title text__start">Hi, I'm Sai Kiran</div>
             <div class="section__subtitle text__start">Frontend developer</div>
-            <div class="section__description">Innovative web developer with a flair for creating elegant solutions in
+            <div class="section__description" i18n>Innovative web developer with a flair for creating elegant solutions in
                 the least amount of time and producing quality work</div>
             <div class="contact__btn__container">
             <button class="btn btn__primary contact__me__btn">
-                Contact Me
+                <ng-container i18n>Contact Me</ng-container>
                 <i class="uil uil-message"></i>
             </button>
             </div>    
@@ -57,7 +57,7 @@
     <div class="scroll__down__container">
         <a class="scroll__down" href="#skills">
             <i class="uil uil-mouse-alt mouse-icon"></i>
-            <span>Scroll down</span>
+            <span i18n>Scroll down</span>
             <i class="uil uil-arrow-down"></i>
         </a>
     </div>
